# experiments-2026-pmc-FL-baselines

./: pyproject.toml
src/: client_app.py  main.py  server_app.py  task.py  utils.py
