[tool.poetry]
name = "experiments-2025-TCD-marl-neighbopor-TL"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.9.1"
torchvision = "^0.24.1"
flwr = {extras = ["simulation"], version = "^1.24.0"}
flwr-datasets = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"